fix: lower z-index for admin header while drawer is open

--- a/packages/frontend/src/app/layouts/admin-layout/admin-layout.component.css
+++ b/packages/frontend/src/app/layouts/admin-layout/admin-layout.component.css
@@ -1,3 +1,4 @@
-.drawer:has(#drawer[checked]){
-    background: red !important;
+.drawer:has(#drawer:checked) #admin-header{
+    z-index: initial;
  }
+
